# Research-implementation-NLU-engine

./: .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  Makefile  README.md  pyproject.toml  scratch.py  setup.py
.github/workflows/: python-app.yml
data/example_data/: pipeline.yml
data/example_data/data/: examples.yml
data/test/classification/: classification_data.json  classification_data.yml  test_spam.json  test_spam.yml  train_spam.json  train_spam.yml
data/test/classification/sample_data/: data.json  data.yml
data/test/pipelines/: pipeline-basic.yml
data/test/ruth_example_data/: nlu.json  nlu.yml  training_example.json  training_example.yml
data/test/validate_element/: pipeline-tokenizer.yml
data/test/vectorizer/: train.csv
ruth/cli/: cli.py  utills.py
ruth/nlu/: elements.py  utils.py
ruth/nlu/classifiers/: ruth_classifier.py
ruth/nlu/featurizers/dense_featurizers/: dense_featurizer.py
ruth/nlu/featurizers/sparse_featurizers/: count_vector_featurizer.py
ruth/shared/nlu/: ruth_elements.py
src/NLU/featurizers/: base.py  countVectorizer.ipynb  countvectorfeaturizer.py  hashVectorizer.ipynb  tfidfVectorizer.ipynb
src/ruth/: constants.py  model_training.py
src/ruth/cli/: cli.py  constants.py  utills.py
src/ruth/cli/data/: banner.txt
src/ruth/nlu/: __init__.py  config.py  constants.py  element.py  elements.py  model.py  registry.py  ruth_elements.py  train.py  utils.py
src/ruth/nlu/classifiers/: __init__.py  bert_classifier.py  classifier.py  constants.py  hf_classifier.py  naive_bayes_classifier.py  ruth_classifier.py  svm_classifier.py  transformers_finetuner.py
src/ruth/nlu/featurizers/: featurizer.py
src/ruth/ruth_python.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ruth/shared/: constants.py  utils.py
src/ruth_python.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  featurizers.py  test_bert_tokenizer.py  test_count_vector_featurizers.py  test_count_vectorizer.py  test_fasttext_vectorizer.py  test_hf_classifier.py  test_hf_featurizer.py  test_hf_tokenizer.py  test_naive_bayes_classifier.py  test_ruth_collection.py  test_ruth_data.py  test_svm_classifier.py  test_tfidf_vectorizer.py  test_trainer.py  test_transformers_finetuner.py  test_whitespace_tokenizer.py
tests/test_on_track/: conftest.py  test_count_vectorizer.py  test_hf_classifier.py  test_hf_tokenizer.py  test_naive_bayes_classifier.py  test_ruth_collection.py  test_svm_classifier.py  test_tfidf_vectorizer.py  test_whitespace_tokenizer.py
utility-scripts/: check_python38.sh
(+24 files in other folders)
