[tool.poetry]
name = "my_package"
version = "0.1.0"
description = "some description..."
authors = ["Prakash R <prakashr7d@gmail.com>, Kasi Viswanathan <vinithkac@gmail.com>"]


[tool.poetry.dependencies]
python = ">=3.7,<=3.10.6"
click = "^8.0.1"
rich = "^12.0.0"
PyYAML = "^6.0"
scipy = "1.5.4"
scikit-learn = "^1.0.2"
jsonpickle = "^2.1.0"
transformers = "^4.20.0"
matplotlib = "^3.5.3"
progressbar = "^2.5"
torch = "^1.12.1"


[tool.poetry.dev-dependencies]
isort = "^4.3.21"
flake8 = "^3.7.9"
pytest = "^5.4.1"
coverage = "^5.1"
requirements-parser = "^0.2.0"
pytest-xdist = "^1.32.0"
black = "^22.8.0"
twine = "^3.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
